--- a/rmProApp.xcodeproj/xcshareddata/xcschemes/rmProApp.xcscheme
+++ b/rmProApp.xcodeproj/xcshareddata/xcschemes/rmProApp.xcscheme
@@ -29,6 +29,19 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
       shouldAutocreateTestPlan = "YES">
+      <Testables>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "E117D0462E688FBB00925291"
+               BuildableName = "rmProAppTests.xctest"
+               BlueprintName = "rmProAppTests"
+               ReferencedContainer = "container:rmProApp.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+      </Testables>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
